After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 629693 - Fix unitialized return value
Fix unitialized return value
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2010-09-14 17:53 UTC by Owen Taylor
Modified: 2010-09-15 21:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix unitialized return value (919 bytes, patch)
2010-09-14 17:53 UTC, Owen Taylor
accepted-commit_now Details | Review

Description Owen Taylor 2010-09-14 17:53:22 UTC
When throwing because only null-terminated arrays are supported, the
return value was unitialized memory.
Comment 1 Owen Taylor 2010-09-14 17:53:23 UTC
Created attachment 170265 [details] [review]
Fix unitialized return value
Comment 2 Colin Walters 2010-09-14 18:04:27 UTC
Review of attachment 170265 [details] [review]:

Looks right.
Comment 3 Colin Walters 2010-09-14 18:04:28 UTC
Review of attachment 170265 [details] [review]:

Looks right.