Fix unitialized return value

When throwing because only null-terminated arrays are supported, the
return value was unitialized memory.

https://bugzilla.gnome.org/show_bug.cgi?id=629693